--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -7,45 +7,37 @@
 </head>
 <body>
 <div align="center">	
-	<h3 th:inline="text">Welcome [[${#httpServletRequest.remoteUser}]]</h3>
-		
-	<form th:action="@{/logout}" method="post">
-		<input type="submit" value="Logout" />
-	</form>
-	
-	<h1>Product Manager</h1>
-	<a href="">Sales Order</a>
-	<a href="product/showAll">Product List</a>
-	<a href="distributor/ShowAll">Distributor List</a>
-	<a href="inventory/ShowAll">Inventory Details</a>
-	
-	<br/><br/>
+	<div lang="en" th:replace="link"> </div>
 	<table border="1" cellpadding="10">
 		<thead>
 			<tr>
-				<th>Product ID</th>
-				<th>Product Name</th>
+				<th>Customer Name</th>
+				<th>Customer Contact</th>
+				<th>Customer Email</th>
+				<th>Product</th>
 				<th>Manufacturer</th>
-				<th>MRP</th>
-				
-				<th sec:authorize="hasRole('ROLE_ADMIN')">Actions</th>				
-				
+				<th>Discount (%)</th>
+				<th>Price</th>
+				<th sec:authorize="hasRole('ROLE_ADMIN')">Actions</th>
 			</tr>
 		</thead>
 		<tbody>
-			<tr th:each="product : ${listProducts}">
-				<td th:text="${product.id}">Product ID</td>
-				<td th:text="${product.productName}">Product Name</td>
-				<td th:text="${product.manufacturer}">Manufacturer</td>
-				<td th:text="${product.MRP}">MRP</td>
+			<tr th:each="salesorder : ${listSalesorder}">
+				<td th:text="${salesorder.customer.name}">Customer Name</td>
+				<td th:text="${salesorder.customer.contactNumber}">Customer Contact</td>
+				<td th:text="${salesorder.customer.email}">Customer Email</td>
+				<td th:text="${salesorder.product.productName}">Product</td>
+				<td th:text="${salesorder.product.manufacturer}">Manufacturer</td>
+				<td th:text="${salesorder.discount}">Discount (%)</td>
+				<td th:text="${salesorder.price}">Price</td>
 				<td sec:authorize="hasRole('ROLE_ADMIN')">
-					<a th:href="@{'/product/edit/' + ${product.id}}">Edit</a>
+					<a th:href="@{'/edit/' + ${salesorder.id}}">Edit</a>
 					&nbsp;&nbsp;&nbsp;&nbsp;
-					<a th:href="@{'/product/delete/' + ${product.id}}">Delete</a>
+					<a th:href="@{'/delete/' + ${salesorder.id}}">Delete</a>
 				</td>
 			</tr>
 		</tbody>
-		<a href="product/new">Create New Product</a>
+		<a href="/new">Create New SalesOrder</a>
 	</table>
 </div>
 </body>
