--- a/src/main/resources/templates/inventoryList.html
+++ b/src/main/resources/templates/inventoryList.html
@@ -7,18 +7,7 @@
 </head>
 <body>
 <div align="center">	
-	<h3 th:inline="text">Welcome [[${#httpServletRequest.remoteUser}]]</h3>
-		
-	<form th:action="@{/logout}" method="post">
-		<input type="submit" value="Logout" />
-	</form>
-	
-	<h1>Product Manager</h1>
-	<a href="product/new">Create New Product</a>
-	<a href="distributor/ShowAll">Distributor List</a>
-	<a href="inventoryDetails">Inventory Details</a>
-	
-	<br/><br/>
+	<div lang="en" th:replace="link"> </div>
 	<table border="1" cellpadding="10">
 		<thead>
 			<tr>
@@ -49,7 +38,7 @@
 				</td>
 			</tr>
 		</tbody>
-		<a href="inventory/new">Create new Inventory Details</a>
+		<a th:href="@{/inventory/new}" >Create new Inventory Details</a>
 	</table>
 </div>
 </body>
