--- a/src/main/resources/templates/saleorder.html
+++ b/src/main/resources/templates/saleorder.html
@@ -7,19 +7,7 @@
 </head>
 <body>
 <div align="center">	
-	<h3 th:inline="text">Welcome [[${#httpServletRequest.remoteUser}]]</h3>
-		
-	<form th:action="@{/logout}" method="post">
-		<input type="submit" value="Logout" />
-	</form>
-	
-	<h1>Product Manager</h1>
-	<a href="">Sales Order</a>
-	<a href="product/showAll">Product List</a>
-	<a href="distributor/ShowAll">Distributor List</a>
-	<a href="inventory/ShowAll">Inventory Details</a>
-	
-	<br/><br/>
+	<div lang="en" th:replace="link"> </div>
 	<table border="1" cellpadding="10">
 		<thead>
 			<tr>
