--- a/src/main/resources/templates/inventoryList.html
+++ b/src/main/resources/templates/inventoryList.html
@@ -2,13 +2,25 @@
 <html xmlns:th="http://www.thymeleaf.org"
 	xmlns:sec="https://www.thymeleaf.org/thymeleaf-extras-springsecurity5">
 <head>
+
 <meta charset="ISO-8859-1">
 <title>Product Manager</title>
+
+<link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" />
+<link href="https://cdn.datatables.net/1.10.23/css/dataTables.bootstrap.min.css" rel="stylesheet" />
+
+
+<script type="text/javascript" th:src="@{/js/jquery-3.5.1.js}"></script>
+<script type="text/javascript" src="https://cdn.datatables.net/1.10.23/js/jquery.dataTables.min.js"></script>
+<script type="text/javascript" src="https://cdn.datatables.net/1.10.23/js/dataTables.bootstrap.min.js"></script>
+<script type="text/javascript" th:src="@{/js/index.js}"></script>
+
 </head>
 <body>
 <div align="center">	
 	<div lang="en" th:replace="link"> </div>
-	<table border="1" cellpadding="10">
+		<a th:href="@{/inventory/new}" >Create new Inventory Details</a>
+	<table id="example" class="table table-striped table-bordered" style="width:100%" >
 		<thead>
 			<tr>
 				<th>S No.</th>
@@ -17,8 +29,8 @@
 				<th>Distributor</th>
 				<th>Units Received</th>
 				<th>Distributor Price</th>
-				<th>Deliverd On</th>			
-				
+				<th>Deliverd On</th>
+				<th sec:authorize="hasRole('ROLE_ADMIN')">Actions</th>				
 			</tr>
 		</thead>
 		<tbody>
@@ -37,8 +49,11 @@
 				</td>
 			</tr>
 		</tbody>
-		<a th:href="@{/inventory/new}" >Create new Inventory Details</a>
+		
 	</table>
+	
+
 </div>
+
 </body>
 </html>
