--- a/src/main/resources/templates/saleorder.html
+++ b/src/main/resources/templates/saleorder.html
@@ -4,11 +4,20 @@
 <head>
 <meta charset="ISO-8859-1">
 <title>Product Manager</title>
+<link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" />
+<link href="https://cdn.datatables.net/1.10.23/css/dataTables.bootstrap.min.css" rel="stylesheet" />
+
+
+<script type="text/javascript" th:src="@{/js/jquery-3.5.1.js}"></script>
+<script type="text/javascript" src="https://cdn.datatables.net/1.10.23/js/jquery.dataTables.min.js"></script>
+<script type="text/javascript" src="https://cdn.datatables.net/1.10.23/js/dataTables.bootstrap.min.js"></script>
+<script type="text/javascript" th:src="@{/js/index.js}"></script>
+
 </head>
 <body>
 <div align="center">	
 	<div lang="en" th:replace="link"> </div>
-	<table border="1" cellpadding="10">
+	<table id="example" class="table table-striped table-bordered" style="width:100%">
 		<thead>
 			<tr>
 				<th>Customer Name</th>
