--- a/src/main/resources/templates/InventoryDetails.html
+++ b/src/main/resources/templates/InventoryDetails.html
@@ -6,6 +6,7 @@
 <title>Product Manager</title>
 <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" />
 <link href="https://cdn.datatables.net/1.10.23/css/dataTables.bootstrap.min.css" rel="stylesheet" />
+<link th:href="@{/css/table.css}" rel="stylesheet" />
 
 
 <script type="text/javascript" th:src="@{/js/jquery-3.5.1.js}"></script>
