--- a/src/main/resources/templates/inventoryList.html
+++ b/src/main/resources/templates/inventoryList.html
@@ -8,7 +8,7 @@
 
 <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" />
 <link href="https://cdn.datatables.net/1.10.23/css/dataTables.bootstrap.min.css" rel="stylesheet" />
-
+<link th:href="@{/css/table.css}" rel="stylesheet" />
 
 <script type="text/javascript" th:src="@{/js/jquery-3.5.1.js}"></script>
 <script type="text/javascript" src="https://cdn.datatables.net/1.10.23/js/jquery.dataTables.min.js"></script>
@@ -20,7 +20,7 @@
 <div align="center">	
 	<div lang="en" th:replace="link"> </div>
 		<a th:href="@{/inventory/new}" >Create new Inventory Details</a>
-	<table id="example" class="table table-striped table-bordered" style="width:100%" >
+	<table id="example" class="table table-striped table-bordered" >
 		<thead>
 			<tr>
 				<th>S No.</th>
