--- a/src/main/resources/templates/link.html
+++ b/src/main/resources/templates/link.html
@@ -8,11 +8,10 @@
 		<input type="submit" value="Logout" />
 	</form>
 	
-	<h1>Product Manager</h1>
-	<a th:href="@{/}">Sales Order</a>
 	<a th:href="@{/product/showAll}">Product List</a>
 	<a  th:href="@{/distributor/ShowAll}">Distributor List</a>
-	<a th:href="@{/inventory/ShowAll}">Inventory Details</a>
-	
+	<a th:href="@{/}">Sales Order List</a>
+	<a th:href="@{/inventory/ShowAll}">Stock List</a>
+	<a th:href="@{/product/inventoryDetails}">Inventory Details</a>
 	<br/><br/>
 </div>
