--- a/src/main/resources/templates/edit_saleorder.html
+++ b/src/main/resources/templates/edit_saleorder.html
@@ -2,48 +2,64 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
 <meta charset="ISO-8859-1">
-<title>Edit Product</title>
+<title>Edit Sales Order</title>
+
+<link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
+
+<link href="https://getbootstrap.com/docs/4.0/examples/signin/signin.css" rel="stylesheet" crossorigin="anonymous">
+<link th:href="@{/css/table.css}" rel="stylesheet" />
+
+
 </head>
 <body>
-	<div align="center">
-		<h1>Edit Product</h1>
-		<br/>
-		<form action="#" th:action="@{/save}" th:object="${Sales}" method="post">
-			<table border="0" cellpadding="10">		
-				<tr>
-					<td>Product Name:</td>
-					<td><div class="form-group blu-margin">
-							<select class="form-control" th:field="*{idProduct}"
-								id="dropProduct">
+	<div class="container">	
+		
+		<form class="form-signin" action="#" th:action="@{/newsave}" th:object="${sales}" method="post">
+			<h2 class="form-signin-heading">Edit Sales Order</h2>
+			<br/>
+			
+					
+				<div class="form-group">
+							
+					<label for="productName"  class="form-label">Product Name</label>
+							<select class="form-control custom-select" th:field="*{idProduct}"
+								id="productName">
 								<option value="0">Select Product</option>
 								<option th:each="product : ${listProducts}"
 									th:value="${product.id}" th:text="${product.productName}"></option>
 							</select>
-					</div></td>
-				</tr>
-				<tr>
-					<td>Distributor Name:</td>
-					<td><div class="form-group blu-margin">
-							<select class="form-control" th:field="*{idCustomer}"
-								id="dropCustomer">
+					</div>
+
+	
+					<div class="form-group">
+						 <label for="distributorName"  class="form-label">Distributor Name</label>
+							<select class="form-control custom-select" th:field="*{idCustomer}"
+								id="distributorName">
 								<option value="0">Select Customer</option>
-								<option th:each="customer : ${listCustomer}"
+								<option th:each="customer : ${listCustomers}"
 									th:value="${customer.id}" th:text="${customer.name}"></option>
 							</select>
-					</div></td>
-				</tr>							
-				<tr>
-					<td>Discount (%):</td>
-					<td><input type="text" th:field="*{discount}" /></td>
-				</tr>				
-				<tr>
-					<td>Price:</td>
-					<td><input type="text" th:field="*{price}" /></td>
-				</tr>				
-				<tr>
-					<td colspan="2"><button type="submit">Save</button></td>
-				</tr>
-			</table>
+					</div>
+					
+					
+					<div class="form-group">
+					
+					<label for="inputDiscount"  class="form-label">Discount (%)</label> 
+						<input type="text" class="form-control" th:field="*{discount}"  id="inputDiscount"
+							aria-describedby="emailHelp" /> 
+					
+				</div>
+				
+				<div class="form-group">
+					
+					<label for="inputPrice"  class="form-label">Price</label> 
+						<input type="text" class="form-control" th:field="*{price}"  id="inputPrice"
+							aria-describedby="emailHelp" /> 
+					
+				</div>
+				
+					<button class="btn btn-primary btn-block" type="submit">Save</button>
+			
 		</form>
 	</div>
 </body>
