--- a/src/main/resources/templates/new_inventory.html
+++ b/src/main/resources/templates/new_inventory.html
@@ -3,57 +3,65 @@
 <head>
 <meta charset="ISO-8859-1">
 <title>Create New Product</title>
+
+<link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
+
+<link href="https://getbootstrap.com/docs/4.0/examples/signin/signin.css" rel="stylesheet" crossorigin="anonymous">
+<link th:href="@{/css/table.css}" rel="stylesheet" />
+
 </head>
 <body>
-	<div align="center">	
-		<h1>Create New Product Inventory</h1>
+
+<div class="container">
+
+	<form class="form-signin" action="#" th:action="@{/inventory/save}" th:object="${stock}" method="post">
+					<h2 class="form-signin-heading">Create Inventory</h2>
 		<br/>
-		<form action="#" th:action="@{/inventory/save}" th:object="${stock}" method="post">
-			<table border="0" cellpadding="10">
-				<tr>
-					<td>Product Name:</td>
-					<td><div class="form-group blu-margin">
-							<select class="form-control" th:field="*{idProduct}"
-								id="dropProduct">
-								<option value="0">Select Product</option>
+			<div class="form-group">
+							
+					<label for="productName"  class="form-label">Product Name</label>
+							<select class="form-control custom-select" th:field="*{idProduct}"
+								id="productName">
+								<option selected value="0">Select Product</option>
 								<option th:each="product : ${listProducts}"
 									th:value="${product.id}" th:text="${product.productName}"></option>
 							</select>
-					</div></td>
-				</tr>
-				
-				<tr>
-					<td>Distributor Name:</td>
-					<td><div class="form-group blu-margin">
-							<select class="form-control" th:field="*{idDistributor}"
-								id="dropProduct">
+			</div>
+
+
+						<div class="form-group">
+							<label for="distributorName"  class="form-label">Distributor Name</label> <select
+								class="form-control custom-select"
+								th:field="*{idDistributor}" id="distributorName">
 								<option value="0">Select Distributor</option>
 								<option th:each="distributor : ${listDistributors}"
 									th:value="${distributor.id}" th:text="${distributor.name}"></option>
 							</select>
-					</div></td>
-				</tr>
-				
-				<tr>
-					<td>Units Received:</td>
-					<td><input type="text" th:field="*{unitsreceived}" /></td>
-				</tr>				
-				<tr>
-					<td>Distributor Price:</td>
-					<td><input type="text" th:field="*{distributorPrice}" /></td>
-				</tr>	
-				
-				<tr>
-					<td>Recieved Date:</td>
-					<td><input type="date" th:value="${stock.recievedDate}" th:field="${stock.recievedDate}" id="date-started"/></td>
-				</tr>
+						</div>
+
+
+					<div class="form-group">
+						<label for="inputUnitsreceived"  class="form-label">Units Received</label> 
+						<input type="text" class="form-control" th:field="*{unitsreceived}"  id="inputUnitsreceived"
+							aria-describedby="emailHelp" /> 
+					</div>
 					
-								
-				<tr>
-					<td colspan="2"><button type="submit">Save</button></td>
-				</tr>
-			</table>
+					<div class="form-group">
+						<label for="distributorPrice"  class="form-label">Distributor Price</label> 
+						<input type="text" class="form-control" th:field="*{distributorPrice}"  id="distributorPrice"
+							aria-describedby="emailHelp"  /> 
+					</div>
+					
+					<div class="form-group">
+						<label for="recievedDate"  class="form-label">Recieved Date</label> 
+						<input type="date" class="form-control" th:field="${stock.recievedDate}"  id="recievedDate"
+							aria-describedby="emailHelp"  /> 
+					</div>
+					
+				<div class="form-group">	
+					<button class="btn btn-primary btn-block"  type="submit">Save</button>
+				</div>
 		</form>
-	</div>
+ </div>		
 </body>
 </html>
